2007-11-27  Lassi A. Tuura  <lat@iki.fi>

	* igprof-analyse: Resolve pure file names against $PATH.  This
	usually just the binary names, and it is better to attempt the
	path search than not to find the file at all for symbol check.

2007-11-27  Lassi A. Tuura  <lat@iki.fi>

	* IgProf.cc: Use "s_activated", not "s_initialized" to protect
	against use of the profiler when it is unsafe to do so.  Avoids
	crash risk at exit time if the application abandons threads.

2007-11-21  Peter Elmer <Peter.Elmer@cern.ch> 

        * Updates to build with CMSSW.  Following the old patch for this,
	  but updating "Ig_Tools" to "IgTools".
        * Add .admin/developers files.

2007-11-14  Peter Elmer <Peter.Elmer@cern.ch>

        * Modify includes and BuildFiles to refer to "IgTools" rather than
	"Ig_Tools".

2007-11-13  Peter Elmer <Peter.Elmer@cern.ch>

        * Migrate Ig_Tools/{IgHook,IgTrace,IgProf} into the CMSSW CVS
	repository from the IGNOMINY repo, changing the subsystem name to
	"IgTools" to conform to the CMSSW conventions. The initial import
	is tagged "pe20071114-CMSSW-import" and the revision history prior
	to that should be maintained.

2007-06-06  Lassi A. Tuura  <lat@iki.fi>

	* igprof-func, igprof-segment: New utility scripts.

2007-06-06  Lassi A. Tuura  <lat@iki.fi>

	Add back support for peak counter value reporting.

	* igprof-analyse: Add --value option to select analysis of normal
	counter value vs. peak value.

	* IgProfTrace.cc (<buffer-size-parameters>): Define unsigned.
	(push): Allow combined ACQUIRE | RELEASE records, for "merge".
	(merge): Add a partial fix to handling peak counter value.  For
	now add an artificial ACQUIRE | RELEASE resource record to bump up
	the peak counter value.  This is not entirely correct in that it
	occurs after resources are released so the peak counter may not be
	adjusted sufficiently high between buffers; but it is better than
	what was there, live with the inaccuracy for now.
