@@ -4,6 +4,10 @@
 	usually just the binary names, and it is better to attempt the
 	path search than not to find the file at all for symbol check.
 
+	* IgProfPerf.cc: Hook 'sigaction' and prevent profiler signal from
+	being overridden.  Improve the logic and add a warning if there is
+	an attempt to block the profiler signal.
+
 2007-11-27  Lassi A. Tuura  <lat@iki.fi>
 
 	* IgProf.cc: Use "s_activated", not "s_initialized" to protect
